--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .vscode
 *~
-_site
-.sass-cache
-.jekyll-cache
-.jekyll-metadata
-vendor
+*_site
+*.sass-cache
+*.jekyll-cache
+*.jekyll-metadata
+*vendor
 
