--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: TeamJimRoberts
 email: jimroberts10@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my website!
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "http://teamjimroberts.com" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://jamesroberts.dev" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
